MIGRATION: Migration spring version